[package]
name = "randrw-s3-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", default-features = false }
aws-types = { version = "1" }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
tokio-util = { version = "0.7" }
futures-util = "0.3"
multipart = { git = "https://github.com/bitrainforest/multipart.git", default-features = false, features = ["server"] }
sscanf = "0.4"
bincode = { version = "2.0.0-rc.3" }
log = "0.4"
log4rs = "1"

[patch.crates-io]
hyper = { git = "https://github.com/gh-efforts/hyper.git", branch = "0.14.x" }
